alteração para entender o atalhos

--- a/site-teste/index.html
+++ b/site-teste/index.html
@@ -11,6 +11,9 @@
     <p>
         Lorem ipsum dolor sit amet consectetur adipisicing elit. Alias laudantium voluptatum adipisci, optio recusandae sequi, debitis blanditiis totam ratione cumque similique cupiditate dolorem temporibus quam ipsa error? Fugit, ducimus amet.
     </p>
+    <p>
+        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Aliquid molestiae, illo est totam, unde eligendi voluptas autem cum perspiciatis magni debitis corrupti eaque quaerat temporibus at dolorem voluptatem dolore? Ut.
+    </p>
     
 </body>
 </html>
